- Fixed too much width for mobile view - Lowered the width for desktop view - Added padding in body to have some spacing

--- a/public/stylings/auth/register.css
+++ b/public/stylings/auth/register.css
@@ -6,9 +6,10 @@
 
 body,
 html {
-  min-height: 100vh;
+  padding: 30px 0;
   overflow-x: hidden;
   overflow-y: scroll;
+  background: linear-gradient(to right, deepskyblue 50%, yellow);
   font-family: 'poppins', Sans-Serif;
   /* Prevents any scrolling issues */
 }
@@ -18,15 +19,13 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to right, deepskyblue 50%, yellow);
-  /* Ensures the container takes the full height of the viewport */
 }
 
 .auth-container {
   justify-content: center;
   text-align: center;
   flex-direction: column;
-  width: 90%;
+  width: 80%;
   padding: 30px 40px;
   border: 3px solid white;
   backdrop-filter: blur(5px);
@@ -213,4 +212,10 @@ html {
 
 .link-container p a:hover {
   text-decoration: underline;
+}
+
+@media (min-width: 800px) {
+  .auth-container {
+    width: 60%;
+  }
 }
